my-dir/main/default/objects/kompalCustomObject__c/fields/KompalCustomFIeld2__c.field-meta.xml
<CustomField>
    <fullName>KompalCustomFIeld2__c</fullName>
    <description>{!Environment.var5} and added {!Environment.var5} again to see scope</description>
    <label>KompalCustomFIeld2</label>
    <type>TextArea</type>
</CustomField>