my-dir/main/default/objects/kompalCustomObject__c/fields/KompalCustomFIeld4__c.field-meta.xml
<CustomField>
    <fullName>KompalCustomFIeld4__c</fullName>
    <description>{!Environment.var5} adding to see scope</description>
    <label>KompalCustomFIeld4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>