my-dir/main/default/objects/kompalCustomObject__c/fields/KompalField1__c.field-meta.xml
<CustomField>
    <fullName>KompalField1__c</fullName>
    <description>testvarreplace</description>
    <label>KompalField1</label>
    <type>TextArea</type>
</CustomField>