my-dir/main/default/objects/kompalCustomObject__c/recordTypes/TestRecord1.recordType-meta.xml
<RecordType>
    <fullName>TestRecord1</fullName>
    <active>true</active>
    <label>TestRecord1</label>
</RecordType>